--- a/Vorn.File/Properties/launchSettings.json
+++ b/Vorn.File/Properties/launchSettings.json
@@ -1,19 +1,12 @@
 {
   "profiles": {
-    "FileServer.API": {
+    "Vorn.File.Host": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:9454;http://localhost:9455"
-    },
-    "Docker": {
-      "commandName": "Docker",
-      "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
-      "publishAllPorts": true,
-      "useSSL": true
     }
   }
 }
